# multi-model-debate-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/multi_agent_debate/: __init__.py  app.py  config.py  graph.py  llm.py  models.py  prompts.py  storage.py
src/multi_agent_debate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent_models.py  test_app_helpers.py  test_compact_mode.py  test_exports.py  test_llm.py  test_models.py
